# nltk-tree-stubs

./: pyproject.toml
nltk-stubs/tree/: immutable.pyi  parented.pyi  parsing.pyi  prettyprinter.pyi  transforms.pyi  tree.pyi
